[tool.poetry]
name = "codewars-py"
version = "1.0.0"
description = "Python project containing solutions for codewars problems"
authors = ["Sanjay Sharma"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"